# cosmwasm-test

./: .gitignore  Cargo.toml  README.md
src/: contract.rs  donation.rs  error.rs  lib.rs  msg.rs  project.rs  state.rs
tests/: contract.rs
