[package]
name = "cosmwasm-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.0.2", features = ["staking"] }
serde = { version = "1.0.199", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "2.0.1"
