[package]
name = "cosmwasm-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cosmwasm-std = { version = "2.0.2", features = ["staking"] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.17"
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.59"

[dev-dependencies]
cosmwasm-schema = "2.0.2"
cw-multi-test = "2.0.1"
